<resources>

    <string name="title_activity_main2">MainActivity2</string>

    <string name="title_dashboard">Events</string>

    <string name="app_name">GDSC</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_failed">Google Sign In failed. Please try again.</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name: </string>
    <string name="email">Email: </string>
    <string name="points">Points: %d</string>
    <string name="title_home">Home</string>
    <string name="title_events">Events</string>
    <string name="title_faq">FAQ</string>
    <string name="welcome_message">Welcome to GDSC MPSTME!</string>
    <string name="app_theme_title">Theme</string>
    <string name="app_theme_system">System Default</string>
    <string name="app_theme_light">Light</string>
    <string name="app_theme_dark">Dark</string>

</resources>