<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.gdsc.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.gdsc.ui.events.EventsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_faq"
        android:name="com.example.gdsc.ui.faq.FaqFragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_faq" />
</navigation>