<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_gdsc" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:gravity="center"
            android:text="@string/app_name" />

    </LinearLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="12dp"
        android:src="@mipmap/ic_launcher"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profile"
        style="@style/ContextualCardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardBackgroundColor="#F9F8F8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/contextual_card_horizontal_padding"
            android:paddingVertical="@dimen/contextual_card_vertical_padding">

            <TextView
                android:id="@+id/profile_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/welcome_message"
                android:textAppearance="@style/TitleStyle" />

            <TextView
                android:id="@+id/profile_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                android:textAlignment="textStart"
                android:textAppearance="@style/SubtitleStyleMedium" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/SubtitleStyleMedium" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/sign_out_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="56dp"
        android:drawableLeft="@drawable/ic_logout"
        android:fontFamily="@font/google_sans_medium"
        android:paddingVertical="4dp"
        android:paddingStart="8dp"
        android:paddingEnd="12dp"
        android:text="@string/sign_out"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@color/textColorPrimary"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_icon"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="@color/textColorTertiary" />





</LinearLayout>